samples/_failures_safe/1761319550_fe118d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15f376bf.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_15f376bf.c:153:13: error: expected expression at end of input
  153 |             } else if (
      |             ^
./samples/SAFE/__tmp_15f376bf.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15f376bf.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15f376bf.c:153:13: error: expected declaration or statement at end of input
